--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=LaravelBrainTree
 APP_ENV=local
 APP_KEY=base64:sm7Tc/Uyi8YaC7qKWaeZsNRHFkGrWJ5FRNK17dcOfww=
 APP_DEBUG=true
